[gd_scene load_steps=2 format=3 uid="uid://0nwcj2qxfw8e"]

[ext_resource type="Script" path="res://InventoryDialog.gd" id="1_inventory"]

[node name="InventoryDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_inventory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialogBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="DialogBox/VBoxContainer"]
layout_mode = 2
text = "Inventory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DialogBox/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="DialogBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MovementCardsButton" type="Button" parent="DialogBox/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Movement Cards"

[node name="ClubCardsButton" type="Button" parent="DialogBox/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Club Cards"

[node name="CardDisplayArea" type="ScrollContainer" parent="DialogBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

[node name="CardRow" type="HBoxContainer" parent="DialogBox/VBoxContainer/CardDisplayArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CloseButton" type="Button" parent="DialogBox/VBoxContainer"]
layout_mode = 2
text = "Close Inventory" 